improve publish workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,24 +34,6 @@ jobs:
     runs-on: ubuntu-latest
     environment: ${{ inputs.environment}}
     steps:
-      - name: Checkout
-        id: checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        if: ${{ hashFiles('package.json') != '' }}
-        id: setup-node
-        uses: actions/setup-node@v4
-        with:
-          node-version-file: .node-version
-          cache: npm
-
-      # - name: Install Dependencies
-      #   id: npm-ci
-      #   run: npm ci
-
-      # - run: npm run --if-present build
-
       - env:
           WASUP_SPACE: "${{ inputs.space || vars.WASUP_SPACE }}"
         run: |
@@ -62,7 +44,23 @@ jobs:
             echo "Using space: ${WASUP_SPACE}"
           fi
 
-      - run: npx @11ty/eleventy
+      - name: Checkout
+        id: checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        if: ${{ hashFiles('package.json') != '' }}
+        id: setup-node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 24
+          cache: npm
+
+      - name: Install Dependencies
+        id: npm-ci
+        run: npm ci
+
+      - run: npm run --if-present build
         env:
           WASUP_SPACE: "${{ inputs.space || vars.WASUP_SPACE }}"
 
@@ -79,6 +77,3 @@ jobs:
       - name: Print Resource URL
         id: output-resource
         run: echo "${{ steps.test-action.outputs.resource }}"
-
-
-        
