add esbuild as dep

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "dedent": "^1.6.0",
+    "esbuild": "^0.25.5",
     "json-canonicalize": "^1.0.6",
     "tsx": "^4.19.4"
   },
