--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gobengo/did-ni.git"
+  },
+  "devDependencies": {
+    "@11ty/eleventy": "^3.1.2",
+    "@11ty/eleventy-img": "^6.0.4"
   }
 }
