--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -64,6 +64,10 @@ jobs:
         env:
           WASUP_SPACE: "${{ inputs.space || vars.WASUP_SPACE }}"
 
+      - name: debugging file
+        run:
+          cat _site/index.html
+
       - name: Publish ${{ inputs.files }} to WAS
         id: test-action
         uses:  gobengo/wallet-attached-storage-action@main
